public/stylesheets/style.css
html {
  box-sizing: border-box
}

/* The Universal Selector */
*, /* All elements*/
*::before, /* All ::before pseudo-elements */
*::after { /* All ::after pseudo-elements */
  /* height & width will now include border & padding by default
     but can be over-ridden as needed */
  box-sizing: inherit;
}

body {
  background-color: #A16AE8;
  color: #EFDCF9;
  /* Use a system font, if none are available use any found sans-sarif font */
  font-family: system-ui, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 
    'Helvetica Neue', sans-serif;
  margin: 0;
}

nav {
  background-color: #9FC7AA;
  color: #1a1a1a;
  display: flex;
  align-items: center;
  justify-content: flex-end;
  padding: 10px;
  min-height: 60px;
}

main {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

h1 {
  font-size: 36px;
}

h2 {
  font-size: 30px;
}

h3 {
  font-size: 24px;
}

ul {
  list-style-type: none;
}

p, label, li, button, input {
  font-size: 18px;
}

label {
  font-weight: bold;
}

section {
  padding: 50px;
}

a {
  color: #00B7FF;
}

pre {
  font-size: 14px;
}

nav > a {
  margin: 8px 24px;
  text-decoration: none;
  font-size: 24px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.btn {
  margin: 16px 0;
}

.link {
  padding: 12px 0;
  font-size: 18px;
  display: inline-block;
}

.profile-avatar {
  margin-top: 50px;
}

.inline {
  display: inline;
}

